chore: add users swagger docs
