# swagger.yml
@@ -1,6 +1,3 @@
-basePath: /
-consumes:
-- application/json
 definitions:
   Feedback:
     properties:
@@ -32,10 +29,33 @@ definitions:
         x-go-name: UserId
     type: object
     x-go-package: product-feedback/feedback
-info:
-  description: Documentation Product Feedback API
-  title: Product Feedback API
-  version: 1.0.0
+  User:
+    properties:
+      avatar_url:
+        type: string
+        x-go-name: AvatarUrl
+      created_at:
+        type: string
+        x-go-name: CreatedAt
+      email:
+        type: string
+        x-go-name: Email
+      id:
+        format: int64
+        type: integer
+        x-go-name: Id
+      name:
+        type: string
+        x-go-name: Name
+      updated_at:
+        type: string
+        x-go-name: UpdatedAt
+      user_name:
+        type: string
+        x-go-name: UserName
+    type: object
+    x-go-package: product-feedback/user
+info: {}
 paths:
   /api/feedback:
     delete:
@@ -77,8 +97,26 @@ paths:
           $ref: '#/responses/notFoundResponse'
       tags:
       - feedback
-produces:
-- application/json
+  /api/users/:id:
+    get:
+      description: Returs user data by id
+      operationId: getUserById
+      responses:
+        "200":
+          $ref: '#/responses/getUserResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - users
+  /api/users/me:
+    get:
+      description: Returs user data
+      operationId: getMe
+      responses:
+        "200":
+          $ref: '#/responses/getUserResponse'
+      tags:
+      - users
 responses:
   badRequestResponse:
     description: Bad request response
@@ -89,13 +127,21 @@ responses:
           x-go-name: Message
       type: object
   createFeedbackResponse:
-    description: ""
+    description: OK response
     schema:
       properties:
         feedbackId:
           description: id of a newly created feedback
           type: string
           x-go-name: FeedbacId
+      type: object
+  errorResponse:
+    description: Error response
+    schema:
+      properties:
+        message:
+          type: string
+          x-go-name: Message
       type: object
   getAllFeedbackResponse:
     description: Returns all product feedback in the system
@@ -107,6 +153,10 @@ responses:
     description: Returns product feedback by id
     schema:
       $ref: '#/definitions/Feedback'
+  getUserResponse:
+    description: OK response
+    schema:
+      $ref: '#/definitions/User'
   notFoundResponse:
     description: Not found feedback response
     schema:
@@ -124,6 +174,4 @@ responses:
           type: string
           x-go-name: Message
       type: object
-schemes:
-- http
 swagger: "2.0"
